css/templatestyles.css
/* ... */
@media (min-width: 1024px) {
  h2,h3,.ddddddddddddddddddhero-h1{
    /* background: yellow; */
    font-weight: 500;
   /* font-family: "Montserrat", sans-serif;
   font-optical-sizing: auto;
   font-weight: 700;
   font-style: normal; */
 }
 .hero-h1{
  font-size: 3.25rem;
        font-weight: 800;
        line-height: 60px !important;
   /* font-weight: 800;
   line-height: 50px!important; */
 }
}



hr{border:1.5px solid #bc5a15;margin:5px 30px -5px 30px}
a{color:#1e396c;text-decoration:none}a:hover{text-decoration:underline; text-underline-offset: 2px;}
button:focus{outline:none}.nav,button{outline:0}.btn{text-decoration:none;background:#bc5a15;color:#fff;display:inline-block;padding:8px 16px;border:0;cursor:pointer}
.btn:hover,.btn:active,.btn:focus{background:#e57930}.btn-outlined{background:#fff;color:green;border:3px solid green;font-weight:700}
.btn.btn-outlined:hover,.btn.btn-outlined:active{background:#ffffff;color:#006100;border-color:#006100}

#fixedbar{background:#bc5a15;color:#fff;position:fixed;top:0;width:100%;height:30px;z-index:3;font-size:13px;font-weight:700;padding:7px 0 0 30px;padding-left:3.33vw}
#phone-icon,#email-icon{width:10px;height:auto;display:inline-block;margin-right:3px}
.fixedbar-icons{display:inline-block;margin-right:3px}
#phone-link{color:#fff;text-decoration:none!important}

#nav-wrap{float:none;padding:0;position:relative}
.nav{background:#2f3f5e;position:fixed;width:100%;height:18.67vw;z-index:3;color:#fff;top:30px;border-bottom:2px solid #212f4a;overflow:hidden}
.nav-link{text-decoration:none;padding:8px 14px 8px 8px;position:relative;color:inherit;font-weight:400}
a.nav-link.selected,a.nav-link.selected:hover{text-underline-offset: 0;text-decoration:underline;text-decoration-color:#bc5a15;text-decoration-thickness:2px;text-decoration-skip-ink:auto;text-underline-position:under}
a.nav-link.selected:hover{cursor:default}
a.nav-link:hover,.dropbtn:hover, .dropbtn:focus,.nav-dd-link{text-decoration:underline;text-decoration-color:#d2d2d2;text-decoration-thickness:1px;text-decoration-skip-ink:auto;text-underline-position:under}
#nav-brand{display:inline-block;max-width:calc(100vw - 62px);padding:3px 12px 0 0;padding-left:calc(10vw / 3)}
.nav a{display:block;padding:8px 15px}
.dropbtn{cursor:pointer;text-underline-offset: 2px;}
#dropbtn-arrow{font-size:10px}

.dropdown{position:relative;display:inline-block;padding:8px 15px}
.dropdown-content{display:none;background-color:#303f5e;min-width:254px;margin-left:15px;z-index:1;left:0;position:relative}
.nav-dd-link {color:#fff;padding:12px 16px;text-decoration:none;display:block}
 .dropdown-content a{color:#fff;padding:12px 16px;text-decoration:none;display:block}
.dropdown-content a:hover{text-decoration: underline; text-underline-offset: 2px;} 

.show{display:block}
.bar1,.bar2,.bar3{width:30px;height:3.25px;background-color:#f1f1f1;margin:6.5px 0;transition:.4s}.change .bar1{transform:rotate(-45deg) translate(-9px,6px)}.change .bar2{opacity:0}.change .bar3{transform:rotate(45deg) translate(-8px,-4px)}
.navbar-toggler{float:right;margin:0 15px 0 0;position:relative}
.navbar-change{height:auto}
#dropbtn-arrow{border:solid #ffffff;box-shadow:#000 1px 1px 1px;border-width:0 3px 3px 0;display:inline-block;padding:3px;transform:rotate(45deg);-webkit-transform:rotate(45deg)}

.big-image{background-color:#2f3f5e;margin-top:calc((56vw / 3) + 30px);width:100%;position:relative;background-size:cover;background-position:50% 50%;height:75vh}
.big-image.foundation{background-image:url(../images/566/foundation.webp)}
.big-image.back-porch{background-image:url(../images/566/back-porch.webp)}
.big-image.site-work{background-image:url(../images/566/site-work.webp)}
.big-image.asphalt-paving{background-image:url(../images/566/asphalt-paving.webp)}
.big-image.home{background-image:url(../images/566/asphalt-and-masonry.webp)}

.overlay{position:relative;left:50%;
  background-color:#0000006e;
  background-color: #30405fa3;
  color:white;width:90%;text-align:center;top:50%;transform:translate(-50%,calc(-50% - 30px));padding:12px}
.hero-h1{text-align:left;text-shadow:2px 2px 4px #000;line-height:39px}
.hero-p{font-weight:700;text-shadow:2px 2px 4px #000;text-align:left}
.hero-btn{padding:12px 32px;border:1px solid #ab4400;text-shadow:1px 1px 4px #5e2500;}

.container{padding:0 20px;width:100%;}
.flex-container {display:flex;flex-direction:column;align-items:center;}


.content{margin-left:auto}
.contact-form{max-width:max-content}

.form-control{display:block;width:100%;padding:.375rem .75rem;background-clip:padding-box;border:1px solid #ced4da;-webkit-appearance:none;-moz-appearance:none;appearance:none}
.form-control.textarea{resize:vertical;min-height:calc(1.5em + .75rem + 2px)}
.figure{border:1px solid #cdcdcd}

/* .card-container{padding:0 20px} */
.card-container{padding:0 20px}
/* .card{border:1px solid #ccc} */

.card-img{width:100%}

.text-box{opacity:0;transition:transform 1s,opacity 1s;transform:translateY(200px)}
.text-box.slide-up{transform:translateY(0);opacity:1}


.towns-list{display:grid;grid-template-columns:repeat(2,1fr);gap:0;list-style-type:none;padding:0}


.pin{
 	width:14px;
	height:14px;
	border-radius: 50% 50% 50% 0;
	padding-left: 8px;
	padding-top: 8px;
	transform:rotate(-45deg);
  -webkit-transform: rotate(-45deg); /* iOS-specific transform fix */
  transition: transform 0.3s ease; /* Smooth transition for interactivity */
  display:inline-block;
  margin-right:3px;
}



.checkmark{display:inline-block;width:20px;height:20px;position:relative;margin-right:0}.checkmark::before{content:"";position:absolute;width:11px;height:19px;border:solid #4CAF50;border-width:0 3px 3px 0;transform:rotate(43deg);border-radius:2px}

.arrow-container{display:inline-block;width:20px}
.arrow{background-color:#bc5a15;display:inline-block;position:relative;width:100%;height:1.5px;top:-4px}
.arrow::before{top:1.5px;transform:rotate(-45deg)}
.arrow::after{top:-1.5px;transform:rotate(45deg)}
/* ... */

